--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-compressor": "^1.5.2",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-vision-camera": "^2.14.1"
+    "react-native-vision-camera": "^2.14.1",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
